2010-02-22  Manuel López-Ibáñez  <manu@gcc.gnu.org>

PR c++/43126
	* c-typeck.c (convert_arguments): Print declaration location.
	* c-common.c (validate_nargs): Rename as
	builtin_function_validate_nargs.
	(check_builtin_function_arguments): Update.
cp/
	* typeck.c (convert_arguments): Update error message.
	
testsuite/
	* gcc.dg/cleanup-1.c: Update.
	* gcc.dg/func-args-1.c: Update.
	* gcc.dg/format/sentinel-1.c: Update.
	* g++.old-deja/g++.jason/scoping10.C: Update.
	* g++.old-deja/g++.ns/lookup5.C: Update.
	* g++.dg/ext/cleanup-1.C: Update.
	* g++.dg/parse/varmod1.C: Update.
	* g++.dg/parse/error33.C: Update.
	* g++.dg/expr/call3.C: Update.
	* g++.dg/func-args-1.C: New.
	


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156979 138bc75d-0d04-0410-961f-82ee72b054a4